--- a/css/style.css
+++ b/css/style.css
@@ -1,170 +1,257 @@
 body {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .uppernav {
-    display: flex;
-    width: 100%;
-    background: black;
-    color: white;
-    font-size: 13px;
-    align-items: center;
-    height: 30px;
+  display: flex;
+  width: 100%;
+  background: black;
+  color: white;
+  font-size: 13px;
+  align-items: center;
+  height: 30px;
 }
 
 .upper-left {
-    list-style: none;
-    flex: 1;
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 20px;
+  list-style: none;
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 20px;
 }
 
 .upper-left li {
-    margin-right: 10px;
-    cursor: pointer;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
 .upper-right {
-    list-style: none;
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
+  list-style: none;
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .upper-right li {
-    margin-right: 10px;
-    cursor: pointer;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
 .lowernav {
-    display: flex;
-    width: 100%;
-    background: rgb(167, 114, 114);
-    color: black;
-    font-size: 13px;
-    align-items: center;
-    height: 50px;
+  display: flex;
+  width: 100%;
+  background: rgb(167, 114, 114);
+  color: black;
+  font-size: 13px;
+  align-items: center;
+  height: 50px;
 }
 
 .lowerlist {
-    list-style: none;
-    display: flex;
-    padding-left: 20px;
+  list-style: none;
+  display: flex;
+  padding-left: 20px;
 }
 
 .lowerlist li {
-    margin-right: 30px;
-    cursor: pointer;
+  margin-right: 30px;
+  cursor: pointer;
 }
 
 .banner {
-    display: flex;;
-    background: yellow;
-    padding-left: 20px;
-    margin: 0;
-    width: 100%;
-    height: 40px;
-    align-items: center;
-    cursor: pointer;
+  display: flex;
+  background: yellow;
+  padding-left: 20px;
+  margin: 0;
+  width: 100%;
+  height: 40px;
+  align-items: center;
+  cursor: pointer;
 }
 
 .header-grid {
-    display: grid;
-    grid-template-columns: 3fr 1.3fr;
-    grid-template-rows: 227px 227px;
-    grid-gap: 10px;
-    color: white;
+  display: grid;
+  grid-template-columns: 3fr 1.3fr;
+  grid-template-rows: 227px 227px;
+  grid-gap: 10px;
+  color: white;
+  margin: 0% 0.3%;
 }
 
 .huge {
-    grid-column: 1/2;
-    grid-row: 1/3;
-    background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/kayleighmcenany-796x419.jpg);
+  grid-column: 1/2;
+  grid-row: 1/3;
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/kayleighmcenany-796x419.jpg);
 }
 
 .huge div {
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(to bottom right, rgb(255, 0, 0) 10%, rgba(0, 0, 0, 0.678) 85%, rgba(0, 0, 0, 0.753));
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(255, 0, 0) 10%,
+    rgba(0, 0, 0, 0.678) 85%,
+    rgba(0, 0, 0, 0.753)
+  );
 }
 
 .tnw-cover-logo {
-    width: 400px;
-    float: left;
-    margin: 0;
+  width: 400px;
+  float: left;
+  margin: 0;
 }
 
 .cover-date {
-    float: right;
-    margin-right: 20px;
+  float: right;
+  margin-right: 20px;
 }
 
 .title-cover {
-    clear: both;
-    font-size: 40px;
-    margin-top: 30%;
-    margin-bottom: 0;
-    margin-left: 20px;
+  clear: both;
+  font-size: 40px;
+  margin-top: 30%;
+  margin-bottom: 0;
+  margin-left: 20px;
 }
 
 .cover-footer {
-    font-size: 11px;
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin-left: 20px;
-    color: rgb(236, 236, 236);
+  font-size: 11px;
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin-left: 20px;
+  color: rgb(236, 236, 236);
 }
 
 .cover-footer li {
-    margin-right: 10px;
-    display: flex;
-    align-items: center;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .cover-footer a {
-    margin-left: 4px;
-    text-decoration: none;
-    color: rgb(236, 236, 236);
+  margin-left: 4px;
+  text-decoration: none;
+  color: rgb(236, 236, 236);
 }
 
-.cover-footer a:hover{
-    color:white;
-    font-size: 11.5px;
+.cover-footer a:hover {
+  color: white;
+  font-size: 11.5px;
 }
 
 .aside {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .aside1 {
-    grid-column: 2;
-    grid-row: 1/2;
-    background: grey;
-    padding-left: 20px;   
+  grid-column: 2;
+  grid-row: 1/2;
+  background: grey;
+  padding-left: 20px;
 }
 
 .aside2 {
-    grid-column: 2;
-    grid-row: 2/3;
-    background: grey;
-    padding-left: 20px;   
+  grid-column: 2;
+  grid-row: 2/3;
+  background: grey;
+  padding-left: 20px;
 }
 
 .aside-head {
-    font-size: 22px;
-    margin-top: 5px;
+  font-size: 22px;
+  margin-top: 5px;
 }
 
 .aside ul {
-    margin-left: 0;
-    margin-bottom: 5px;
+  margin-left: 0;
+  margin-bottom: 5px;
 }
 
 .aside > p {
-    margin-bottom: 4px;
-    margin-top: 20px;
+  margin-bottom: 4px;
+  margin-top: 20px;
+  width: 35%;
+}
+
+@font-face {
+  font-family: ARS Maquette;
+  src: url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-regular.eot#iefix")
+      format("embedded-opentype"),
+    url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-regular.woff")
+      format("woff"),
+    url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-regular.ttf")
+      format("truetype");
+  font-style: normal;
+  font-weight: 400;
+}
+
+.latest {
+  margin: 5% 18% 20px 20%;
+  font-family: "ARS Maquette", Arial, Helvetica, sans-serif;
+}
+
+.latest-news-header {
+  color: #ff4422;
+  font-size: 26px;
+  font-weight: 1000;
+  letter-spacing: -1px;
+}
+
+.latest-grid {
+  display: grid;
+  grid-template-columns: 22% 22% 22% 22%;
+  grid-template-rows: 226px 226px;
+  gap: 1.3% 1.3%;
+}
+
+.art-img {
+  height: 60%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.art-img-1 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/DDFree-movies-516x270.jpg);
+}
+
+.art-img-2 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/playstation-ps5-dualsense-controller-design-516x270.jpg);
+}
+
+.art-img-3 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/07/Zoom-trash-hed-v2-513x270.jpg);
+}
+
+.art-img-4 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/sale_27613_primary_image_wide-540x270.jpg);
+}
+
+.art-img-5 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/ev-tesla-bmw-nissan-leaf-i3-vw-eup-magnetic-field-pacemaker-cied-cardiac-480x270.jpg);
+}
+
+.art-img-6 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/1-11-516x270.jpg);
+}
+
+.art-img-7 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-...-516x270.png);
+}
+
+.art-img-8 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/SprayableTech-MIT-514x270.jpg);
+}
+
+.art-desc {
+  margin: 3% auto;
+}
+
+.art-foot {
+  margin: 0;
+  color: gray;
+  font-size: 13px;
 }
