--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ body {
 }
 
 #logo-corner:hover {
-  background-image: url(/img/logobackground.gif);
+  background-image: url(img/logobackground.gif);
   background-position: 50%;
   background-size: cover;
 }
@@ -206,37 +206,45 @@ body {
 .huge {
   grid-column: 1/2;
   grid-row: 1/3;
-  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/kayleighmcenany-796x419.jpg);
+  background-image: linear-gradient(135deg, rgba(255, 0, 0, 0.883), rgba(29, 28, 28, 0.849) 60%, rgb(0, 0, 0) 100%),
+  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/kayleighmcenany-796x419.jpg);
+  background-size: contain;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 2fr 2fr;
+  padding: 20px;
 }
 
-.huge div {
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(255, 0, 0) 10%,
-    rgba(0, 0, 0, 0.678) 85%,
-    rgba(0, 0, 0, 0.753)
-  );
+.huge-top {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row: 1/2;
 }
 
 .tnw-cover-logo {
   width: 400px;
-  float: left;
   margin: 0;
 }
 
 .cover-date {
-  float: right;
-  margin-right: 20px;
+  display: grid;
+  justify-content: end;
+}
+
+.huge-bottom {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: max-content max-content max-content;
+  align-content: end;
+}
+
+.insights {
+  margin: 0;
 }
 
 .title-cover {
-  clear: both;
-  font-size: 40px;
-  margin-top: 30%;
-  margin-bottom: 0;
-  margin-left: 20px;
+  font-size: 45px;
+  margin: 0;
 }
 
 .cover-footer {
@@ -244,8 +252,8 @@ body {
   display: flex;
   list-style: none;
   padding: 0;
-  margin-left: 20px;
   color: rgb(236, 236, 236);
+  margin: 0;
 }
 
 .cover-footer li {
@@ -266,9 +274,11 @@ body {
 }
 
 .aside {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  /* flex-direction: column; */
+  align-content: end;
+  grid-template-columns:  1fr;
+  grid-template-rows: max-content max-content max-content;
 }
 
 .aside1 {
@@ -276,6 +286,8 @@ body {
   grid-row: 1/2;
   background: grey;
   padding-left: 20px;
+  background-image: linear-gradient(135deg, rgba(255, 0, 0, 0.883), rgba(29, 28, 28, 0.849) 60%, rgb(0, 0, 0) 100%),
+  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/psychedelic-796x419.png);
 }
 
 .aside2 {
@@ -283,21 +295,23 @@ body {
   grid-row: 2/3;
   background: grey;
   padding-left: 20px;
+  background-image: linear-gradient(135deg, rgba(255, 0, 0, 0.883), rgba(29, 28, 28, 0.849) 60%, rgb(0, 0, 0) 100%),
+  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/PlayStation-5-DualSense-796x417.jpg);
+  background-size: cover;
 }
 
 .aside-head {
-  font-size: 22px;
-  margin-top: 5px;
+  font-size: 24px;
+  margin: 0;
 }
 
 .aside ul {
   margin-left: 0;
   margin-bottom: 5px;
+  margin: 0;
 }
 
 .aside > p {
-  margin-bottom: 4px;
-  margin-top: 20px;
   width: 35%;
 }
 
