--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   box-sizing: border-box;
   font-family: Helvetica Neue, Arial, sans-serif;
+  max-width: 100%;
 }
 
 .hidden-elements {
@@ -186,7 +187,6 @@ body {
   background: yellow;
   padding-left: 20px;
   margin: 0;
-  width: 100%;
   height: 30px;
   align-items: center;
   cursor: pointer;
@@ -206,8 +206,13 @@ body {
 .huge {
   grid-column: 1/2;
   grid-row: 1/3;
-  background-image: linear-gradient(135deg, rgba(255, 0, 0, 0.883), rgba(29, 28, 28, 0.849) 60%, rgb(0, 0, 0) 100%),
-  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/kayleighmcenany-796x419.jpg);
+  background-image: linear-gradient(
+      135deg,
+      rgba(255, 0, 0, 0.883),
+      rgba(29, 28, 28, 0.849) 60%,
+      rgb(0, 0, 0) 100%
+    ),
+    url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/kayleighmcenany-796x419.jpg);
   background-size: contain;
   display: grid;
   grid-template-columns: 1fr;
@@ -277,7 +282,7 @@ body {
   display: grid;
   /* flex-direction: column; */
   align-content: end;
-  grid-template-columns:  1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: max-content max-content max-content;
 }
 
@@ -286,8 +291,13 @@ body {
   grid-row: 1/2;
   background: grey;
   padding-left: 20px;
-  background-image: linear-gradient(135deg, rgba(255, 0, 0, 0.883), rgba(29, 28, 28, 0.849) 60%, rgb(0, 0, 0) 100%),
-  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/psychedelic-796x419.png);
+  background-image: linear-gradient(
+      135deg,
+      rgba(255, 0, 0, 0.883),
+      rgba(29, 28, 28, 0.849) 60%,
+      rgb(0, 0, 0) 100%
+    ),
+    url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/psychedelic-796x419.png);
 }
 
 .aside2 {
@@ -295,8 +305,13 @@ body {
   grid-row: 2/3;
   background: grey;
   padding-left: 20px;
-  background-image: linear-gradient(135deg, rgba(255, 0, 0, 0.883), rgba(29, 28, 28, 0.849) 60%, rgb(0, 0, 0) 100%),
-  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/PlayStation-5-DualSense-796x417.jpg);
+  background-image: linear-gradient(
+      135deg,
+      rgba(255, 0, 0, 0.883),
+      rgba(29, 28, 28, 0.849) 60%,
+      rgb(0, 0, 0) 100%
+    ),
+    url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/PlayStation-5-DualSense-796x417.jpg);
   background-size: cover;
 }
 
@@ -467,7 +482,6 @@ body {
   }
 }
 
-
 /* FUNDING SECTION */
 .funding {
   display: flex;
@@ -568,7 +582,7 @@ body {
   padding-left: 14px;
 }
 
-.fund-center p{
+.fund-center p {
   margin: 3% 0 0;
   font-size: 14px;
 }
@@ -589,7 +603,8 @@ body {
   color: grey;
 }
 
-@media (max-width: 1024px){ /*///////1024///////////*/
+@media (max-width: 1024px) {
+  /*///////1024///////////*/
   .funding {
     width: 95%;
   }
@@ -616,9 +631,9 @@ body {
   }
 }
 
-@media (max-width: 768px) {  /*///////768///////////*/
+@media (max-width: 768px) {
+  /*///////768///////////*/
   .funding {
-    
   }
   .funding-main {
     display: grid;
@@ -632,7 +647,7 @@ body {
     margin: 0;
     padding: 10px 10px 10px 15%;
   }
-  
+
   .fund-top-bottom {
     padding: 10px 10px 10px 0;
     margin-left: 15%;
@@ -645,69 +660,330 @@ body {
     left: 2%;
   }
 
-.funding {
-  display: flex;
-  flex-direction: column;
+  .funding {
+    display: flex;
+    flex-direction: column;
+    max-width: 1192px;
+    margin: 0 auto;
+    /* border: 1px solid black; */
+  }
+
+  .funding-top {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+  }
+
+  .rounds-left {
+    flex: 1;
+    font-size: 1.5em;
+    color: #ff4422;
+    font-weight: 900;
+    text-decoration: none;
+  }
+
+  .rounds-r {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .rounds-right {
+    border: none;
+    padding: 0;
+    margin: 10px 0 10px 0;
+  }
+
+  .rounds-right-last {
+    margin-bottom: 0;
+  }
+
+  .header-grid {
+    grid-template-columns: 100%;
+    grid-template-rows: 182px 182px 182px;
+    grid-row-gap: 10px;
+  }
+
+  .huge {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .title-cover {
+    font-size: 24px;
+  }
+
+  .aside1 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .aside2 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+}
+
+/* latest news section starts here */
+
+.news-section {
+  margin: 2% auto 5% auto;
   max-width: 1192px;
+  padding: 0 20px;
+}
+
+.news-section-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0;
+}
+
+.news {
+  padding: 0 12px;
+}
+
+.news-header {
+  color: #f42;
+  font-weight: 700;
+  line-height: 1.1;
+  font-family: sans-serif;
+  font-size: 25px;
+  margin-bottom: 7%;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.news-header:hover {
+  color: #000;
+}
+
+.news ul {
+  list-style: none;
+  padding-inline-start: 0;
+  cursor: pointer;
+}
+
+.news-article {
+  width: 100%;
+  position: relative;
+  height: 275px;
   margin: 0 auto;
-  /* border: 1px solid black; */
+  z-index: -1;
+  transition: 0.5s;
 }
 
-.funding-top {
+.news-article-img {
+  opacity: 1;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  background-size: cover;
+  background-position: 50%;
+  background-color: #000;
+  height: 65%;
+  padding: 15%;
+}
+
+.news-article-gradient {
+  background: transparent url(/img/news-iimage-gradient.png) no-repeat;
+  background-size: 100% 100%;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.news-heading {
+  bottom: 0;
+  left: 0;
+  padding: 14px;
+  position: absolute;
+  right: 0;
+  z-index: -1;
+}
+
+.news-header-popular {
+  color: #fff;
+  font-size: 13px;
+  font-family: sans-serif;
+  font-weight: 500;
+  line-height: 1.5;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.news-header-popular-title {
+  margin-bottom: 5px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.1;
+  color: #fff;
+  margin-block-start: 0;
+}
+
+.news-header-popular-title:hover {
+  text-decoration: underline;
+}
+
+.news-article-footer {
+  color: hsla(0, 0%, 100%, 0.6);
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
   display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-bottom: 20px;
 }
 
-.rounds-left {
-  flex: 1;
-  font-size: 1.5em;
-  color: #ff4422;
-  font-weight: 900;
-  text-decoration: none;
-}
-
-.rounds-r {
-  flex: 1;
+.news-latest-section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-color: rgba(255, 68, 34, 0.06);
+  margin: 2px 0;
 }
 
-.rounds-right {
-  border: none;
-  padding: 0;
-  margin: 10px 0 10px 0;
+.news-latest-header {
+  flex: 1;
+  padding: 10px 14px 0;
 }
 
-.rounds-right-last {
-  margin-bottom: 0;
+.news-latest {
+  font-size: 13px;
+  font-weight: 500;
+  color: #f42;
+  font-family: sans-serif;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+  margin: 0;
 }
 
-.header-grid {
-  grid-template-columns: 100%;
-  grid-template-rows: 182px 182px 182px;
-  grid-row-gap: 10px;
+.news-lattest-title {
+  width: 100%;
+  font-size: 14px;
+  color: #f42;
+  font-weight: 700;
+  line-height: 1.25;
+  max-height: 56px;
+  margin: 0;
 }
 
-.huge {
-  grid-column: 1/2;
-  grid-row: 1/2;
+.nes-latest-img {
+  opacity: 1;
+  flex: 0 0 96px;
+  background-size: cover;
+  background-position: 50%;
+  height: 96px;
+  width: 96px;
+  background-color: #000;
 }
 
-.title-cover {
-  font-size: 24px;
+.news-latest-section-headline {
+  border-bottom: 1px solid #eee;
 }
 
-.aside1 {
-  grid-column: 1/2;
-  grid-row: 2/3;
+.news-latest-section-headline h4 {
+  color: #555;
+  padding: 6px 0 6px 14px;
+  margin: 0 auto;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.5;
 }
 
-.aside2 {
-  grid-column: 1/2;
-  grid-row: 3/4;
+.news-latest-section-headline p {
+  margin: 0 auto;
 }
 
+.news-latest-section-headline p:hover {
+  color: gray;
+}
+
+.news1 div.news-article-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/DDFree-movies-368x276.jpg");
+}
+
+.news2 div.news-article-img {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Snag_26d7fdfc-368x276.png);
+}
+
+.news3 div.news-article-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2016/04/skype-video-calling-on-microsoft-edge1-368x276.jpg");
+}
+
+.news4 div.news-article-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Animal-Crossing-Hyrule-368x276.jpg");
+}
+
+.news5 div.news-article-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/corona-brands-368x276.jpg");
+}
+
+.news6 div.news-article-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/airbnb2-368x276.jpg");
+}
+
+.news7 div.news-article-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Google-coronavirus-portal-368x276.jpg");
+}
+
+.news8 div.news-article-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Facebook-Gaming-Tournaments-368x276.jpg");
+}
+
+.news1 div.nes-latest-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/slack-interface-customize.jpg");
+}
+
+.news2 div.nes-latest-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Snag_27fce4c6.png");
+}
+
+.news3 div.nes-latest-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-....png");
+}
+
+.news4 div.nes-latest-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Getty-Photo-Challenge.jpg");
+}
+
+.news5 div.nes-latest-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/question-unknown.png");
+}
+
+.news6 div.nes-latest-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/brand-authority.png");
+}
+
+.news7 div.nes-latest-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/bubble-car-isetta-bmw-microlino-microletta-ev-car-new-announced.png");
+}
+
+.news8 div.nes-latest-img {
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Person-using-laptop-on-plane-Wi-Fi-hed.jpg");
+}
+
+@media (max-width: 1024px) {
+  .news-section-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  .news-header {
+    margin-bottom: 10%;
+  }
+}
+
+@media (max-width: 768px) {
+  .news-section-grid {
+    grid-template-columns: 1fr;
+  }
+  .news-header {
+    margin-bottom: 5%;
+  }
+  .news-article {
+    height: 527px;
+  }
 }
