--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   box-sizing: border-box;
   font-family: Helvetica Neue, Arial, sans-serif;
-  max-width: 100%;
+  max-width: 100vw;
 }
 
 .hidden-elements {
@@ -92,8 +92,30 @@ body {
   z-index: 999;
 }
 
+#logo-corner-mobile {
+  width: 106px;
+  background: linear-gradient(to bottom right, #c09, #f42 85%);
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  transition: ease-in-out;
+  visibility: hidden;
+  z-index: 999;
+}
+
+#logo-corner-mobile img {
+  padding: 16px;
+}
+
+@media (max-width: 768px) {
+  #logo-corner-mobile {
+    visibility: visible;
+  }
+}
+
 #logo-corner:hover {
-  background-image: url(img/logobackground.gif);
+  background-image: url(/img/logobackground.gif);
   background-position: 50%;
   background-size: cover;
 }
@@ -162,17 +184,6 @@ body {
   100% {
     height: 100%;
     opacity: 1;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .logo-corner .popup-menu {
-    position: relative;
-    visibility: visible;
-    padding: 500px;
-  }
-  .nav .lowernav {
-    padding-left: 106px;
   }
 }
 
@@ -333,6 +344,12 @@ body {
 .latest {
   margin: 5% auto 10%;
   max-width: 1192px;
+}
+
+@media (max-width: 768px) {
+  .latest {
+    margin-bottom: 15%;
+  }
 }
 
 .latest-news-header {
@@ -790,7 +807,7 @@ body {
 }
 
 .news-article-gradient {
-  background: transparent url(/img/news-iimage-gradient.png) no-repeat;
+  background: transparent url(/img/news-image-gradient.png) no-repeat;
   background-size: 100% 100%;
   bottom: 0;
   left: 0;
@@ -981,9 +998,32 @@ body {
     grid-template-columns: 1fr;
   }
   .news-header {
-    margin-bottom: 5%;
+    margin-bottom: 1%;
   }
   .news-article {
-    height: 527px;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .change-on-mobile {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .upper-left {
+    padding-left: 2%;
+  }
+  .upper-left li:last-of-type {
+    display: none;
+  }
+  .upper-right {
+    padding: 0;
+  }
+  .upper-right li:last-of-type {
+    display: none;
+  }
+  #banner {
+    height: 60px;
   }
 }
