--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
 }
 
 #logo-corner:hover {
-  background-image: url(/img/logobackground.gif);
+  background-image: url(../img/logobackground.gif);
   background-position: 50%;
   background-size: cover;
 }
@@ -807,7 +807,7 @@ body {
 }
 
 .news-article-gradient {
-  background: transparent url(/img/news-image-gradient.png) no-repeat;
+  background: transparent url(../img/news-image-gradient.png) no-repeat;
   background-size: 100% 100%;
   bottom: 0;
   left: 0;
