--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ body {
 }
 
 .latest {
-  margin: 5% auto 10%;
+  margin: 5% auto;
   max-width: 1192px;
 }
 
@@ -334,7 +334,7 @@ body {
 
 .latest-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 226px 226px;
   gap: 1.3% 1.9%;
 }
@@ -363,19 +363,19 @@ body {
 }
 
 .art-img-4 {
-  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/sale_27613_primary_image_wide-540x270.jpg);
-}
-
-.art-img-5 {
-  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/ev-tesla-bmw-nissan-leaf-i3-vw-eup-magnetic-field-pacemaker-cied-cardiac-480x270.jpg);
-}
-
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021fr 1fr 1fr 1fr0/04/sale_27613_primary_im1fr 1fr 1fr 1frage_wide-540x270.jpg);
+}1fr 1fr 1fr 1fr
+1fr 1fr 1fr 1fr
+.art-img-5 {1fr 1fr 1fr 1fr
+  background-image: url1fr 1fr 1fr 1fr(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021fr 1fr 1fr 1fr0/04/ev-tesla-bmw-nissan-l1fr 1fr 1fr 1freaf-i3-vw-eup-magnetic-field-pacemaker-cied-cardiac-480x271fr 1fr 1fr 1fr0.jpg);
+}1fr 1fr 1fr 1fr
+1fr 1fr 1fr 1fr
 .art-img-6 {
   background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/1-11-516x270.jpg);
 }
 
 .art-img-7 {
-  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-...-516x270.png);
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-...-516x270.png);1fr 1fr 1fr 1fr
 }
 
 .art-img-8 {
@@ -419,7 +419,7 @@ body {
 @media (max-width: 768px) {
   .latest-grid {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(8, 1fr);
     width: 100%;
     cursor: pointer;
     gap: 10px;
@@ -491,6 +491,10 @@ body {
   text-decoration: none;
 }
 
+.rounds-left:hover, .rounds-right:hover, .deals-top-left:hover, .deals-top-right:hover {
+  color: black;
+}
+
 .rounds-r {
   flex: 1;
   display: flex;
@@ -513,12 +517,14 @@ body {
   flex: 1;
   flex-direction: row;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .fund {
   display: flex;
   flex-basis: 24%;
   flex-direction: column;
+  color: #555;
 }
 
 .fund-top {
@@ -530,6 +536,7 @@ body {
   position: relative;
   z-index: -1;
 }
+
 
 .fund-top h3 {
   margin: 0;
@@ -546,6 +553,7 @@ body {
 .fund-amt {
   margin: 0;
   font-weight: bold;
+  color: black;
 }
 
 .fund-type {
@@ -566,11 +574,16 @@ body {
 .fund-center {
   margin-top: 2%;
   padding-left: 14px;
+  cursor: pointer;
 }
 
 .fund-center p{
   margin: 3% 0 0;
   font-size: 14px;
+}
+
+.fund-center p:hover {
+  color: black;
 }
 
 .fund-foot {
@@ -582,13 +595,100 @@ body {
 
 .fund-foot p {
   margin: 3% 0 0;
+  cursor: pointer;
 }
 
 .fund-foot small {
   margin: 3% 0 0;
   color: grey;
+  cursor: pointer;
 }
 
+/* DEALS SECTION */
+.latest-deals {
+  display: flex;
+  flex-direction: column;
+  max-width: 1192px;
+  margin: 20px auto 0;
+}
+
+.deals-top {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  /* border: solid black; */
+  margin: 30px 0;
+}
+
+.deals-top-left {
+  display: flex;
+  flex: 1;
+  text-decoration: none;
+  color: #ff4422;
+  font-size: 1.5em;
+  font-weight: bold;
+  letter-spacing: -1px;
+}
+
+.deals-top-right {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  text-decoration: none;
+  color: #ff4422;
+}
+
+.deals-body {
+  display: grid;
+  grid-template-columns: repeat(4, 24%);
+  grid-template-rows: 226px 226px;
+  grid-row-gap: 20px;
+  justify-content: space-between;
+}
+
+.deals {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 80% 10% 10%;
+}
+
+.deals-img {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: url(https://cdnp0.stackassets.com/7a3bbbe12b77586ca58798dc2aac6b0f51f7a8ac/store/f9f2b2fcf253000289dc27dcaaa106fa4b1a0c3e579bbc0612dd572eee70/sale_26993_primary_image.jpg);
+  background-size: cover;
+  cursor: pointer ;
+}
+
+.deals-title {
+  margin: 0;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+}
+
+.deals-title:hover {
+  color: #ff4422;
+  text-decoration: underline solid 0.5px;
+}
+
+.deals-price {
+  margin: 0;
+}
+
+.crossed {
+  font-size: 13px;
+  text-decoration: line-through;
+  color: grey;
+}
+
+
+
+
+
+
+/* MEDIA QUERIES */
 @media (max-width: 1024px){ /*///////1024///////////*/
   .funding {
     width: 95%;
@@ -614,6 +714,24 @@ body {
     display: grid;
     grid-template-rows: 1fr;
   }
+
+  .latest-deals {
+    width: 95%;
+  }
+
+  .deals-body {
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
+    grid-template-rows: repeat(3, 226px);
+    grid-row-gap: 20px;
+    justify-content: space-between;
+  }
+  
+  .deals-title {
+    font-size: 0.9em;
+    margin-bottom: 5px;
+  }
+    
 }
 
 @media (max-width: 768px) {  /*///////768///////////*/
@@ -649,8 +767,7 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 1192px;
-  margin: 0 auto;
-  /* border: 1px solid black; */
+  margin: 15% auto;
 }
 
 .funding-top {
@@ -658,7 +775,6 @@ body {
   flex: 1;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 20px;
 }
 
 .rounds-left {
@@ -708,6 +824,44 @@ body {
 .aside2 {
   grid-column: 1/2;
   grid-row: 3/4;
+}
+
+
+.deals-body {
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, 1fr);
+  width: 100%;
+  cursor: pointer;
+  gap: 10px;
+  height: 100%;
+}
+
+.latest-deals {
+  height: 684px;
+}
+
+.deals {
+  position: relative;
+  z-index: -1;
+  margin: 15px 0;
+}
+
+.deals-img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 75px;
+  padding-top: 25px;
+  background-position: 50%;
+  background-size: cover;
+  z-index: 0;
+  transition: 0.5s;
+}
+
+.deals-title, .deals-price {
+  margin: 0 0 0 90px;
+  font-size: 13px;
+  font-family: "Liberation Sans Bold";
 }
 
 }
