--- a/css/style.css
+++ b/css/style.css
@@ -363,13 +363,12 @@ body {
 }
 
 .art-img-4 {
-  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021fr 1fr 1fr 1fr0/04/sale_27613_primary_im1fr 1fr 1fr 1frage_wide-540x270.jpg);
-}1fr 1fr 1fr 1fr
-1fr 1fr 1fr 1fr
-.art-img-5 {1fr 1fr 1fr 1fr
-  background-image: url1fr 1fr 1fr 1fr(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021fr 1fr 1fr 1fr0/04/ev-tesla-bmw-nissan-l1fr 1fr 1fr 1freaf-i3-vw-eup-magnetic-field-pacemaker-cied-cardiac-480x271fr 1fr 1fr 1fr0.jpg);
-}1fr 1fr 1fr 1fr
-1fr 1fr 1fr 1fr
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/sale_27613_primary_image_wide-540x270.jpg );
+}
+
+.art-img-5 {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/ev-tesla-bmw-nissan-leaf-i3-vw-eup-magnetic-field-pacemaker-cied-cardiac-480x270.jpg);
+}
 .art-img-6 {
   background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/1-11-516x270.jpg);
 }
