--- a/css/style.css
+++ b/css/style.css
@@ -212,14 +212,16 @@ body {
   margin: 106px 0.3% 0 0.3%;
 }
 
+/* prettier-ignore */
 .huge {
   grid-column: 1/2;
   grid-row: 1/3;
-  background-image: linear-gradient(
-      135deg,
-      rgba(255, 0, 0, 0.883),
-      rgba(29, 28, 28, 0.849) 60%,
-      rgb(0, 0, 0) 100%
+  background-image: 
+  linear-gradient(
+    135deg,
+    rgba(255, 0, 0, 0.883),
+    rgba(29, 28, 28, 0.849) 60%,
+    rgb(0, 0, 0) 100%
     ),
     url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/kayleighmcenany-796x419.jpg);
   background-size: contain;
@@ -294,12 +296,14 @@ body {
   grid-template-rows: max-content max-content max-content;
 }
 
+/* prettier-ignore */
 .aside1 {
   grid-column: 2;
   grid-row: 1/2;
   background: grey;
   padding-left: 20px;
-  background-image: linear-gradient(
+  background-image:
+      linear-gradient(
       135deg,
       rgba(255, 0, 0, 0.883),
       rgba(29, 28, 28, 0.849) 60%,
@@ -308,12 +312,14 @@ body {
     url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/psychedelic-796x419.png);
 }
 
+/* prettier-ignore */
 .aside2 {
   grid-column: 2;
   grid-row: 2/3;
   background: grey;
   padding-left: 20px;
-  background-image: linear-gradient(
+  background-image: 
+      linear-gradient(
       135deg,
       rgba(255, 0, 0, 0.883),
       rgba(29, 28, 28, 0.849) 60%,
@@ -350,7 +356,7 @@ body {
 }
 
 .latest-news-header {
-  color: #ff4422;
+  color: #f42;
   font-size: 26px;
   font-weight: 1000;
   letter-spacing: -1px;
@@ -415,7 +421,7 @@ body {
 }
 
 .art-desc:hover {
-  color: #ff4422;
+  color: #f42;
 }
 
 .art-foot {
@@ -491,7 +497,7 @@ body {
   }
 
   .latest-grid article:hover {
-    color: #ff4422;
+    color: #f42;
   }
 }
 
@@ -513,7 +519,7 @@ body {
 .rounds-left {
   flex: 1;
   font-size: 1.5em;
-  color: #ff4422;
+  color: #f42;
   font-weight: 900;
   text-decoration: none;
 }
@@ -533,9 +539,9 @@ body {
 
 .rounds-right {
   text-decoration: none;
-  color: #ff4422;
+  color: #f42;
   padding: 0 10px;
-  border-right: 1px solid #ff4422;
+  border-right: 1px solid #f42;
 }
 
 .rounds-right-last {
@@ -569,7 +575,7 @@ body {
 
 .fund-top h3 {
   margin: 0;
-  background: #ff4422;
+  background: #f42;
   color: white;
   padding: 10px 10px 10px 29%;
 }
@@ -616,7 +622,7 @@ body {
 }
 
 .fund-foot {
-  border-top: 0.5px solid #ff4422;
+  border-top: 0.5px solid #f42;
   margin-top: 5%;
   font-size: 14px;
   padding-left: 14px;
@@ -652,7 +658,7 @@ body {
   display: flex;
   flex: 1;
   text-decoration: none;
-  color: #ff4422;
+  color: #f42;
   font-size: 1.5em;
   font-weight: bold;
   letter-spacing: -1px;
@@ -663,7 +669,7 @@ body {
   flex: 1;
   justify-content: flex-end;
   text-decoration: none;
-  color: #ff4422;
+  color: #f42;
 }
 
 .deals-body {
@@ -697,7 +703,7 @@ body {
 }
 
 .deals-title:hover {
-  color: #ff4422;
+  color: #f42;
   text-decoration: underline solid 0.5px;
 }
 
@@ -1250,7 +1256,7 @@ body {
   .rounds-left {
     flex: 1;
     font-size: 1.5em;
-    color: #ff4422;
+    color: #f42;
     font-weight: 900;
     text-decoration: none;
   }
